--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,8 @@
         <activity android:name="assessment.Activity_Editable_Group_Report" />
         <activity android:name="assessment.Activity_Send_Report_Individual" />
         <activity android:name="assessment.Activity_Send_Report_Group" />
+        <activity android:name =".Activity_Record_Voice"/>
+        <service android:name=".RecordingService" />
         <activity
             android:name="assessment.Activity_Review_Report"
             android:launchMode="singleTask"/>
