--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/lightning"
+        android:icon="@mipmap/ic_lightning"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/lightning"
+        android:roundIcon="@mipmap/ic_lightning"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
